--- a/frontend/src/assets/styles/header.scss
+++ b/frontend/src/assets/styles/header.scss
@@ -61,3 +61,19 @@ header.navbar{
         }
     }
 }
+
+.auth-links{
+    display: flex;
+    gap: 10px;
+    a, button{
+        background: none;
+        border: none;
+        text-decoration: none;
+        display: flex;
+        cursor: pointer;
+        color: white;
+        font-family: sans-serif;
+        align-items: center;
+        font-size: 1.02em;
+    }
+}
